{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 18,
  "lineage": "64e13658-5e7c-e92f-ec78-2f817a8318fc",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2026-03-24T02:27:19.133-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-092a68fd-42f4-4f6a-8fb/global/firewalls/klist-allow-internal",
            "log_config": [],
            "name": "klist-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/project-092a68fd-42f4-4f6a-8fb/global/networks/klist-dr-vpc",
            "priority": 1000,
            "project": "project-092a68fd-42f4-4f6a-8fb",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-092a68fd-42f4-4f6a-8fb/global/firewalls/klist-allow-internal",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.klist_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_k8s_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-24T03:05:45.968-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-092a68fd-42f4-4f6a-8fb/global/firewalls/klist-allow-k8s-api",
            "log_config": [],
            "name": "klist-allow-k8s-api",
            "network": "https://www.googleapis.com/compute/v1/projects/project-092a68fd-42f4-4f6a-8fb/global/networks/klist-dr-vpc",
            "priority": 1000,
            "project": "project-092a68fd-42f4-4f6a-8fb",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-092a68fd-42f4-4f6a-8fb/global/firewalls/klist-allow-k8s-api",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.klist_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-24T02:38:06.839-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-092a68fd-42f4-4f6a-8fb/global/firewalls/klist-allow-ssh-iap",
            "log_config": [],
            "name": "klist-allow-ssh-iap",
            "network": "https://www.googleapis.com/compute/v1/projects/project-092a68fd-42f4-4f6a-8fb/global/networks/klist-dr-vpc",
            "priority": 1000,
            "project": "project-092a68fd-42f4-4f6a-8fb",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-092a68fd-42f4-4f6a-8fb/global/firewalls/klist-allow-ssh-iap",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.klist_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k3s_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260313",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-092a68fd-42f4-4f6a-8fb/zones/europe-west4-a/disks/klist-dr-master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/project-092a68fd-42f4-4f6a-8fb/zones/europe-west4-a/instances/klist-dr-master",
            "instance_id": "1278301644688189408",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "2D0AprlEvjc=",
            "metadata_startup_script": "#!/bin/bash\r\ncurl -sfL https://get.k3s.io | K3S_TOKEN=YkhIbKGAZNsXTd6wOIFCsGSsYhabrat3 sh -s - server \\\r\n  --disable traefik \\\r\n  --disable servicelb \\\r\n  --node-external-ip=$(curl -s ifconfig.me)\r\n",
            "name": "klist-dr-master",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.12.166.61",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-092a68fd-42f4-4f6a-8fb/global/networks/klist-dr-vpc",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-092a68fd-42f4-4f6a-8fb/regions/europe-west4/subnetworks/klist-dr-subnet",
                "subnetwork_project": "project-092a68fd-42f4-4f6a-8fb"
              }
            ],
            "project": "project-092a68fd-42f4-4f6a-8fb",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-092a68fd-42f4-4f6a-8fb/zones/europe-west4-a/instances/klist-dr-master",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west4-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "metadata_startup_script"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.klist_vpc",
            "google_compute_subnetwork.klist_subnet",
            "random_password.k3s_cluster_token"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k3s_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260313",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-092a68fd-42f4-4f6a-8fb/zones/europe-west4-a/disks/klist-dr-worker-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/project-092a68fd-42f4-4f6a-8fb/zones/europe-west4-a/instances/klist-dr-worker-1",
            "instance_id": "538532479010596852",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "G8JMwSh_WCQ=",
            "metadata_startup_script": "#!/bin/bash\r\n# Așteptăm câteva secunde să fim siguri că masterul a pornit complet\r\nsleep 30 \r\ncurl -sfL https://get.k3s.io | K3S_URL=https://10.0.1.2:6443 K3S_TOKEN=YkhIbKGAZNsXTd6wOIFCsGSsYhabrat3 sh -s - agent\r\n",
            "name": "klist-dr-worker-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.90.163.192",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-092a68fd-42f4-4f6a-8fb/global/networks/klist-dr-vpc",
                "network_ip": "10.0.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-092a68fd-42f4-4f6a-8fb/regions/europe-west4/subnetworks/klist-dr-subnet",
                "subnetwork_project": "project-092a68fd-42f4-4f6a-8fb"
              }
            ],
            "project": "project-092a68fd-42f4-4f6a-8fb",
            "scheduling": [
              {
                "automatic_restart": false,
                "instance_termination_action": "STOP",
                "min_node_cpus": 0,
                "on_host_maintenance": "TERMINATE",
                "preemptible": true,
                "provisioning_model": "SPOT"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-092a68fd-42f4-4f6a-8fb/zones/europe-west4-a/instances/klist-dr-worker-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west4-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "metadata_startup_script"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_instance.k3s_master",
            "google_compute_network.klist_vpc",
            "google_compute_subnetwork.klist_subnet",
            "random_password.k3s_cluster_token"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "klist_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/project-092a68fd-42f4-4f6a-8fb/global/networks/klist-dr-vpc",
            "mtu": 0,
            "name": "klist-dr-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "2413413122509366788",
            "project": "project-092a68fd-42f4-4f6a-8fb",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-092a68fd-42f4-4f6a-8fb/global/networks/klist-dr-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "klist_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-24T02:27:21.764-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/project-092a68fd-42f4-4f6a-8fb/regions/europe-west4/subnetworks/klist-dr-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "klist-dr-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/project-092a68fd-42f4-4f6a-8fb/global/networks/klist-dr-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "project-092a68fd-42f4-4f6a-8fb",
            "purpose": "PRIVATE",
            "region": "europe-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-092a68fd-42f4-4f6a-8fb/regions/europe-west4/subnetworks/klist-dr-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.klist_vpc"
          ]
        }
      ]
    }
  ]
}